tests/macros/float/editor.stderr
error: option `editor` does not exist for kind `float`
 --> tests/macros/float/editor.rs:2:43
  |
2 |     let q = requestty::questions![Float { editor: todo!() }];
  |                                           ^^^^^^
