tests/macros/float/editor.rs
fn main() {
    let q = requestty::questions![Float { editor: todo!() }];
}
